5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1596_1017.log
== TEST (2019-03-22 19:50:44) 
-- CODE:
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 print(round(dis))

-- ERROR:
File "XXXX", line 7
    print(round(dis))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 19:50:54) 
-- CODE:
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 print(round(dis))

-- EXECUTION TIME:
0.174269
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 7
    print(round(dis))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:50:57) 
-- CODE:
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(dis))

-- ERROR:
File "XXXX", line 7
    print(round(dis))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:52:33) 
-- CODE:
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(dis, 2))


-- ERROR:
File "XXXX", line 7
    print(round(dis, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 19:52:35) 
-- CODE:
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(dis, 2))


-- EXECUTION TIME:
0.201507
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 7
    print(round(dis, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:53:04) 
-- CODE:
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(dis, 2))


-- ERROR:
File "XXXX", line 7
    print(round(dis, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:53:47) 
-- CODE:
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(dis, 2))
-- ERROR:
File "XXXX", line 8
    print(round(dis, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:53:49) 
-- CODE:
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(dis, 2
			  ))
-- ERROR:
File "XXXX", line 8
    print(round(dis, 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:53:55) 
-- CODE:
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(dis, 2))
-- ERROR:
File "XXXX", line 8
    print(round(dis, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:42:46) 
-- CODE:
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(dis, 2))
-- ERROR:
File "XXXX", line 8
    print(round(dis, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:44:40) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis, 2))
-- OUTPUT:
10325.98
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:44:51) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis, 2))
-- EXECUTION TIME:
0.167374
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
10325.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:45:27) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- OUTPUT:
10325.98
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:45:53) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- EXECUTION TIME:
0.196652
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
10325.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:46:20) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- OUTPUT:
10325.98
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:47:00) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*arccos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dis = r*arccos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:47:36) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- OUTPUT:
10325.98
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:47:52) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- EXECUTION TIME:
0.174889
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
10325.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:47:57) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- OUTPUT:
10325.98
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:48:25) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- OUTPUT:
10325.98
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:48:42) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- OUTPUT:
10325.98
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:49:19) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- EXECUTION TIME:
0.123009
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
10325.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:50:55) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(dis,2))
-- ERROR:
File "XXXX", line 9
    print(round(dis,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:51:05) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- OUTPUT:
10325.98
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:51:49) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- OUTPUT:
10325.98
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:52:15) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- EXECUTION TIME:
0.150594
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
10325.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:52:20) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- OUTPUT:
10325.98
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 12:07:13) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- EXECUTION TIME:
0.157699
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
10325.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:07:17) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- OUTPUT:
10325.98
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:29:22) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))

print(round(dis,2))
-- OUTPUT:
10325.98
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:30:45) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Latitude de G2: ")))
r = 6371.01
dis = r*acos(sin(t1)*(sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(dis,2))
-- ERROR:
File "XXXX", line 9
    print(round(dis,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:32:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de G1: ")))
t2 = radians(float(input("Latitude de T2: ")))
g2 = radians(float(input("Longitude de G2: ")))
R = 6371.01

distancia = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(distancia,2))

-- EXECUTION TIME:
0.154526
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
